# snowDemo

./: .gitignore  CMakeLists.txt  audio.c  audio.h  cameraController.c  cameraController.h  character.c  character.h  geometry.c  geometry.h  glsl_unpacker.h  glutils.c  glutils.h  grass.c  grass.h  main.c  resources.h  ressource.c  ressource.h  shader.c  shader.h  shadow.c  shadow.h  sky.c  sky.h  snow.c  snow.h  text.c  text.h  tree.c  tree.h  window.h  window_win32.c  window_x11.c
include/: glad.c  resources.h  text_data.h
include/glad/: glad.h
resources/: idle.anim  moon.circles  music.it  running.anim  running.anim.xz
resources/shaders/: atmosphereFragSrc.glsl  basicVertSrc.glsl  characterFragSrc.glsl  characterVertSrc.glsl  debugFragSrc.glsl  debugVertSrc.glsl  grassCompSrc.glsl  grassFragSrc.glsl  grassVertSrc.glsl  iceFragSrc.glsl  iceVertSrc.glsl  lightFragSrc.glsl  lightVertSrc.glsl  moonFragSrc.glsl  moonVertSrc.glsl  postVertSrc.glsl  rnoiseFragSrc.glsl  skyFragSrc.glsl  skyVertSrc.glsl  snoiseFragSrc.glsl  snowFragSrc.glsl  snowTCSSrc.glsl  snowTESCSrc.glsl  snowVertSrc.glsl  terrainFragSrc.glsl  terrainVertSrc.glsl  textFragSrc.glsl  textVertSrc.glsl  transitionFragSrc.glsl  treeFragSrc.glsl  treeVertSrc.glsl  updateSnowFragSrc.glsl
ressources/: running.anim.xz
tools/: ToolDownloader.cmake  glyphs_generator.py  resources_embedder.py
